[package]
name = "osint-studio"
version = "1.0.0"
description = "Open-source OSINT investigation tool with graph visualization, confidence scoring, and automated reporting"
authors = ["OSINT Studio Development Team"]
edition = "2021"
license = "MIT"
repository = "https://github.com/sooox-cc/osint-studio"
homepage = "https://github.com/sooox-cc/osint-studio"
keywords = ["osint", "intelligence", "investigation", "graph", "visualization"]
categories = ["command-line-utilities", "visualization"]
readme = "../../README.md"

[lib]
name = "osint_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
base64 = "0.22"
csv = "1.3"

